--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,16 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-firebase/app": "^17.4.2",
     "@react-native/assets-registry": "^0.75.3",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "^51.0.32",
+    "expo-image-picker": "~15.0.7",
     "react-native": "^0.74.5",
-    "send": "^0.19.0",
-    "expo-image-picker": "~15.0.7"
+    "react-native-vector-icons": "^10.2.0",
+    "send": "^0.19.0"
   },
   "devDependencies": {
     "@types/react": "~18.2.79",
