--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^5.0.0",
+    "jimp": "^1.6.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "openai": "^4.58.2",
