--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,14 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.0.0",
-    "jimp": "^1.6.0",
+    "jimp": "^0.16.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "openai": "^4.58.2",
+    "sharp": "^0.33.5",
     "tesseract.js": "^5.1.1"
   },
   "devDependencies": {
